--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -12,6 +12,11 @@ services:
     networks:
       - inception
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     
   wordpress:
     build: requirements/wordpress/.
@@ -31,21 +36,36 @@ services:
     networks:
       - inception
     depends_on:
-      - mariadb
+      mariadb:
+        condition: service_healthy
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pidof php-fpm82 || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     
   nginx:
     build: requirements/nginx/.
     container_name: nginx
+    environment:
+      - DOMAIN_NAME=${DOMAIN_NAME}
     ports:
+      - "80:80"
       - "443:443"
     volumes:
       - /home/${LOGIN}/data/wordpress:/var/www/html
     networks:
       - inception
     depends_on:
-      - wordpress
+      wordpress:
+        condition: service_healthy
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pidof nginx || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 networks:
   inception:
