--- a/srcs/.env
+++ b/srcs/.env
@@ -1,16 +1,16 @@
 ﻿# Domain Configuration
 DOMAIN_NAME=lynny.42.fr
-LOGIN=lynny
+LOGIN=lyoussef
 
 # MySQL/MariaDB Configuration
-MYSQL_ROOT_PASSWORD=rootpassword123
+MYSQL_ROOT_PASSWORD=fsdfdsfjsdfjsdfjk
 MYSQL_DATABASE=wordpress
 MYSQL_USER=wpuser
-MYSQL_PASSWORD=wppassword123
+MYSQL_PASSWORD=Wp8Nq5Dx2Km9Rv4Yt7Jh3Pz6QtMn5Bx
 
 # WordPress Configuration
 WP_ADMIN_USER=superuser
-WP_ADMIN_PASSWORD=adminpass123
+WP_ADMIN_PASSWORD=Ad7Wx4Vq9Ks2Mn8Ry5Ht6Jb3Fp8Lz4
 WP_ADMIN_EMAIL=admin@lynny.42.fr
 WP_TITLE=Inception WordPress Site
 WP_URL=https://lynny.42.fr
