--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,24 +1,22 @@
 FROM alpine:3.21
 
-# Install nginx and openssl
-RUN apk add --no-cache nginx openssl
+# Install nginx, openssl, and gettext (for envsubst)
+RUN apk add --no-cache nginx openssl gettext
 
 # Create directories
-RUN mkdir -p /etc/nginx/ssl
+RUN mkdir -p /etc/nginx/ssl /etc/nginx/templates
 
-# Copy configuration files
+# Copy configuration templates
 COPY ssl/generate_ssl.sh /generate_ssl.sh
-COPY conf/default /etc/nginx/http.d/default.conf
-COPY conf/http-redirect.conf /etc/nginx/http.d/http-redirect.conf
+COPY conf/default /etc/nginx/templates/default.conf.template
+COPY conf/http-redirect.conf /etc/nginx/templates/http-redirect.conf.template
 COPY conf/nginx.conf /etc/nginx/nginx.conf
 
 # Set permissions
 RUN chmod +x /generate_ssl.sh
 
-# Create startup script
-RUN echo '#!/bin/sh' > /start.sh && \
-    echo '/generate_ssl.sh' >> /start.sh && \
-    echo '/usr/sbin/nginx -g "daemon off;"' >> /start.sh && \
-    chmod +x /start.sh
+# Copy startup script
+COPY tools/start.sh /start.sh
+RUN chmod +x /start.sh
 
 CMD ["/start.sh"]
