--- a/srcs/.env
+++ b/srcs/.env
@@ -2,6 +2,11 @@
 DOMAIN_NAME=lynny.42.fr
 LOGIN=lyoussef
 
+# Service Hosts and Ports
+MYSQL_HOST=mariadb
+WORDPRESS_HOST=wp-php
+WORDPRESS_PORT=9000
+
 # MySQL/MariaDB Configuration
 MYSQL_ROOT_PASSWORD=fsdfdsfjsdfjsdfjk
 MYSQL_DATABASE=wordpress
