--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,9 +1,14 @@
 user nginx;
+
 worker_processes auto;
-events {
+
+events
+{
     worker_connections 1024;
 }
-http {
+
+http 
+{
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
     sendfile on;
