--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -13,7 +13,10 @@ services:
       - inception
     restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "mysql -u${MYSQL_USER} -p${MYSQL_PASSWORD} -e 'SELECT 1' ${MYSQL_DATABASE} || exit 1"]
+      test:
+        - "CMD-SHELL"
+        - "mysql -u${MYSQL_USER} -p${MYSQL_PASSWORD}
+          -e 'SELECT 1' ${MYSQL_DATABASE} || exit 1"
       interval: 10s
       timeout: 5s
       retries: 5
