--- a/srcs/.env
+++ b/srcs/.env
@@ -1,21 +1,12 @@
-﻿# Domain Configuration
 DOMAIN_NAME=lynny.42.fr
-LOGIN=lyoussef
 
-# Service Hosts and Ports
-MYSQL_HOST=mariadb
-WORDPRESS_HOST=wp-php
-WORDPRESS_PORT=9000
-
-# MySQL/MariaDB Configuration
-MYSQL_ROOT_PASSWORD=fsdfdsfjsdfjsdfjk
+# MariaDB
+MYSQL_ROOT_PASSWORD=rootpass123
 MYSQL_DATABASE=wordpress
 MYSQL_USER=wpuser
-MYSQL_PASSWORD=Wp8Nq5Dx2Km9Rv4Yt7Jh3Pz6QtMn5Bx
+MYSQL_PASSWORD=wppass123
 
-# WordPress Configuration
-WP_ADMIN_USER=superuser
-WP_ADMIN_PASSWORD=Ad7Wx4Vq9Ks2Mn8Ry5Ht6Jb3Fp8Lz4
+# WordPress
+WP_ADMIN_USER=siteadmin
+WP_ADMIN_PASSWORD=admin123
 WP_ADMIN_EMAIL=admin@lynny.42.fr
-WP_TITLE=Inception WordPress Site
-WP_URL=https://lynny.42.fr
