--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -2,75 +2,46 @@ services:
   mariadb:
     build: requirements/mariadb/.
     container_name: mariadb
-    environment:
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-      - MYSQL_DATABASE=${MYSQL_DATABASE}
-      - MYSQL_USER=${MYSQL_USER}
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
     volumes:
-      - /home/${LOGIN}/data/mariadb:/var/lib/mysql
+      - db-data:/var/lib/mysql
     networks:
       - inception
-    restart: unless-stopped
-    healthcheck:
-      test:
-        - "CMD-SHELL"
-        - "mysql -u${MYSQL_USER} -p${MYSQL_PASSWORD}
-          -e 'SELECT 1' ${MYSQL_DATABASE} || exit 1"
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    
+    env_file:
+      - .env
+    restart: always
+
   wordpress:
     build: requirements/wordpress/.
     container_name: wp-php
-    environment:
-      - MYSQL_HOST=${MYSQL_HOST}
-      - MYSQL_DATABASE=${MYSQL_DATABASE}
-      - MYSQL_USER=${MYSQL_USER}
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
-      - WP_ADMIN_USER=${WP_ADMIN_USER}
-      - WP_ADMIN_PASSWORD=${WP_ADMIN_PASSWORD}
-      - WP_ADMIN_EMAIL=${WP_ADMIN_EMAIL}
-      - WP_TITLE=${WP_TITLE}
-      - WP_URL=${WP_URL}
     volumes:
-      - /home/${LOGIN}/data/wordpress:/var/www/html
+      - wp-files:/var/www/html
     networks:
       - inception
     depends_on:
-      mariadb:
-        condition: service_healthy
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD-SHELL", "pidof php-fpm82 || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    
+      - mariadb
+    env_file:
+      - .env
+    restart: always
+
   nginx:
     build: requirements/nginx/.
     container_name: nginx
-    environment:
-      - DOMAIN_NAME=${DOMAIN_NAME}
-      - WORDPRESS_HOST=${WORDPRESS_HOST}
-      - WORDPRESS_PORT=${WORDPRESS_PORT}
     ports:
       - "443:443"
     volumes:
-      - /home/${LOGIN}/data/wordpress:/var/www/html
+      - wp-files:/var/www/html
     networks:
       - inception
     depends_on:
-      wordpress:
-        condition: service_healthy
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD-SHELL", "pidof nginx || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      - wordpress
+    env_file:
+      - .env
+    restart: always
 
 networks:
   inception:
     driver: bridge
+
+volumes:
+  wp-files:
+  db-data:
