--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,13 +1,12 @@
 FROM alpine:3.21
 
-RUN apk add --no-cache mariadb mariadb-client bash && \
-    mkdir -p /run/mysqld /var/lib/mysql && \
-    chown -R mysql:mysql /run/mysqld /var/lib/mysql
+RUN apk add --no-cache mariadb mariadb-client
 
-COPY conf/script.sh /script.sh
+COPY conf/mariadb-server.cnf /etc/my.cnf.d/mariadb-server.cnf
+COPY tools/script.sh /script.sh
 
-RUN chmod +x /script.sh
-
-EXPOSE 3306
+RUN mkdir -p /run/mysqld && \
+    chown -R mysql:mysql /run/mysqld && \
+    chmod +x /script.sh
 
 CMD ["/script.sh"]
