--- a/srcs/requirements/mariadb/conf/mariadb-server.cnf
+++ b/srcs/requirements/mariadb/conf/mariadb-server.cnf
@@ -1,4 +1,17 @@
+[server]
+
 [mysqld]
-port=3306
-bind-address=0.0.0.0
-skip-networking=0
+# skip-networking
+user = root
+datadir = /var/lib/mysql
+tmpdir = /tmp
+
+[galera]
+
+bind-address = 0.0.0.0
+
+[embedded]
+
+[mariadb]
+
+[mariadb-10.5]
