--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,13 +1,17 @@
 FROM alpine:3.21
-RUN apk add --no-cache \
-    php82-fpm php82-mysqli php82-json php82-curl \
-    php82-dom php82-exif php82-fileinfo php82-mbstring \
-    php82-openssl php82-xml php82-zip php82-phar \
-    curl bash && \
-    mkdir -p /var/www/html && \
-    chown -R nobody:nobody /var/www/html
-COPY conf/www.conf /etc/php82/php-fpm.d/www.conf
-COPY conf/script.sh /script.sh
+
+RUN apk update && apk upgrade && apk add \
+    php83-fpm \
+    php83-mysqli \
+    php83-phar \
+    curl && \
+    ln -sf /usr/bin/php83 /usr/bin/php
+# php83-mysqli -->  MySQL/MariaDB extension for PHP
+# curl --> tool for transferring data with URLs
+
+COPY conf/www.conf /etc/php83/php-fpm.d/www.conf
+COPY tools/script.sh /script.sh
+
 RUN chmod +x /script.sh
-EXPOSE 9000
-CMD ["/script.sh"]
+
+CMD ["./script.sh"]
