--- a/srcs/.env
+++ b/srcs/.env
@@ -1,4 +1,4 @@
-DOMAIN_NAME=lynny.42.fr
+DOMAIN_NAME=lyoussef.42.fr
 
 # MariaDB
 MYSQL_ROOT_PASSWORD=rootpass123
@@ -9,4 +9,4 @@ MYSQL_PASSWORD=wppass123
 # WordPress
 WP_ADMIN_USER=siteadmin
 WP_ADMIN_PASSWORD=admin123
-WP_ADMIN_EMAIL=admin@lynny.42.fr
+WP_ADMIN_EMAIL=admin@lyoussef.42.fr
