--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -9,7 +9,7 @@ server {
     root /var/www/html;
     index index.php index.html;
 
-    server_name lynny.42.fr;
+    server_name lyoussef.42.fr;
 
     location / {
         try_files $uri $uri/ =404;
