--- a/srcs/.env
+++ b/srcs/.env
@@ -7,6 +7,15 @@ MYSQL_USER=wpuser
 MYSQL_PASSWORD=wppass123
 
 # WordPress
-WP_ADMIN_USER=siteadmin
-WP_ADMIN_PASSWORD=admin123
+WP_SITE_TITLE=My INCEPTION Page
+WP_SITE_URL=https://lyoussef.42.fr
+
+# WordPress Regular User
+WP_USER=regularuser
+WP_USER_PASSWORD=reguser444
+WP_USER_EMAIL=user@lyoussef.42.fr
+
+# WordPress Admin User
+WP_ADMIN_USER=superuser
+WP_ADMIN_PASSWORD=superuser444
 WP_ADMIN_EMAIL=admin@lyoussef.42.fr
