--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -15,3 +15,32 @@ COPY tools/script.sh /script.sh
 RUN chmod +x /script.sh
 
 CMD ["./script.sh"]
+
+
+
+
+# FROM alpine:3.21
+
+# RUN apk update && apk upgrade && apk add \
+#     php83-fpm \
+#     php83-mysqli \
+#     php83-json \
+#     php83-curl \
+#     php83-dom \
+#     php83-exif \
+#     php83-fileinfo \
+#     php83-mbstring \
+#     php83-openssl \
+#     php83-xml \
+#     php83-zip \
+#     php83-phar \
+#     mysql-client \
+#     curl && \
+#     ln -sf /usr/bin/php83 /usr/bin/php
+
+# COPY conf/www.conf /etc/php83/php-fpm.d/www.conf
+# COPY tools/script.sh /script.sh
+
+# RUN chmod +x /script.sh
+
+# CMD ["./script.sh"]
