--- a/srcs/requirements/wordpress/conf/www.conf
+++ b/srcs/requirements/wordpress/conf/www.conf
@@ -1,5 +1,9 @@
 [www]
-
-listen = 9000 # which port to listen on 
-pm = dynamic # workers are adjusted based on traffic
-pm.max_children = 5 # max 5 PHP requests at once
+user = nobody
+group = nobody
+listen = 9000
+pm = dynamic
+pm.max_children = 5
+pm.start_servers = 2
+pm.min_spare_servers = 1
+pm.max_spare_servers = 3
