--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -41,8 +41,16 @@ services:
 volumes:
   db-data:
     driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: /home/${USER}/data/mariadb
   wordpress_data:
     driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: /home/${USER}/data/wordpress
 
 networks:
   inception:
